# dim-cmd-line-tool

./: .gitmodules  CMakeLists.txt  README.md
config/: example.toml  example.xml  mock.xml
inc/: DimMultiline.hxx  DimSubscriber.hxx  Object.hxx
inc/Configuration/: Manager.hxx  ServiceInfo.hxx  XmlParser.hxx
inc/DimHandlers/: CommandSender.hxx  DimHandlersManager.hxx  DimManager.hxx  RpcInfo.hxx  Service.hxx  ServiceInfo.hxx  Subscriber.hxx
inc/Logging/: Log.hxx  Logger.hxx  Stream.hxx  TextColor.hxx
inc/Notify/: Notification.hxx
inc/UI/: MainMenu.hxx  UI.hxx  UICommandMenu.hxx  UIMainMenu.hxx  UIManager.hxx  UIMenuContent.hxx  UINotification.hxx  UIObjects.hxx  UIServiceMenu.hxx  UITools.hxx  UITypes.hxx
inc/Utils/: Result.hxx
src/Configuration/: ServiceInfo.cxx  XmlParser.cxx
src/DimHandlers/: CommandSender.cxx  DimHandlersManager.cxx  DimManager.cxx  Subscriber.cxx
src/Logging/: Logger.cxx  TextColor.cxx
src/Notify/: Notification.cxx
src/UI/: UICommandMenu.cxx  UIManager.cxx  UINotification.cxx  UIObjects.cxx  UIServiceMenu.cxx  UITools.cxx  UITypes.cxx
tests/Logging/: google_tests.cxx
tests/local/: main.cxx
tools/: dcu.cxx  run-sub.cxx
